# asn1_parser

./: PROJECT_SUMMARY.md  README.md
.github/workflows/: deploy-pages.yml
asn1_web_decoder/: .gitignore  CHANGELOG.md  Cargo.toml  DEMO.md  DEPLOYMENT.md  QUICKSTART.md  REACT_MIGRATION.md  README.md  build.sh
asn1_web_decoder/src/: decoder.rs  encoder.rs  lib.rs
asn1_web_decoder/www/: FINAL_OPTIMIZATIONS.md  FULLSCREEN_UI.md  HEX_COLOR_CODING.md  HEX_VIEW_FEATURE.md  README.md  UI_OVERVIEW.md  app.js  index.html  package-lock.json  package.json  serve.sh  styles.css  vite.config.js
asn1_web_decoder/www-react/: COMPACT_VIEW.md  MUI_INTEGRATION.md  QUICKSTART.md  USAGE_GUIDE.md  WHATS_NEW.md
asn1_web_decoder/www-react/src/components/: HexView.jsx  HexViewSection.jsx  InputSection.jsx
asn1_web_decoder/www/src/: App.jsx  index.css
asn1_web_decoder/www/src/components/: HexView.jsx  HexViewSection.jsx  InputDialog.jsx  OutputSection.jsx  TreeNode.jsx
